--- a/java-webapp/pom.xml
+++ b/java-webapp/pom.xml
@@ -22,4 +22,11 @@
     </dependencies>
 
     <build>
-        <plugins
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+</project>
